--- a/03-task-manager/starter/package.json
+++ b/03-task-manager/starter/package.json
@@ -11,10 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.11.10"
+    "express": "^4.19.2",
+    "mongodb": "^6.8.0",
+    "mongoose": "^5.13.22"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.22"
   }
 }
